# tkd_registration_frontend

./: .gitignore  .safety-project.ini  =2.15.0  CLAUDE.md  Dockerfile  Dockerfile-dev  README.md  REFACTORING_NOTES.md  api.py  app.py  dev_requirements.txt  justfile  models.py  okcc.yml  okgp.yml  pyproject.toml  requirements.txt  ruff.toml  tests.py  zappa_settings.json
.github/: copilot-instructions.md
.github/workflows/: frontend_tests.yml  main.yml
.zed/: debug.json  settings.json
docs/: api-patterns.md  database-schema.md  migration-status.md  testing-guide.md
envs/: okcc.yml  okgp.yml  test.yml
scripts/: _bootstrap.py  archive_entries.py  fuzzy_match_coaches.py  generate_badges.py  generate_breaking_schedule.py  generate_poomsae_schedule.py  generate_sparring_schedule.py  get_poomsae_counts.py  get_sparring_counts.py  init_db.py  reset_db.py  seed_db.py  switch_env.sh  test_db.py  trigger_stripe_webhook.py
static/js/: admin.js  coaches.js  competitors.js  form.js  global.js
templates/: 404.html  500.html  add_entry.html  admin.html  admin_entries.html  base.html  coaches.html  competitors.html  disabled.html  edit.html  entries.html  export.html  form.html  hotel.html  index.html  information.html  landing.html  login.html  placeholder.html  print.html  purchase.html  purchase_success.html  registration_error.html  registration_success.html  schedule.html  school_fragment.html  success.html  tickets.html  tshirts.html  tulsa.html  upload.html
templates/api/: schools.html
templates/form/: autofill.html  belt.html  class.html  common.html  events.html  liability.html  lookup_modal.html  manual.html  medical.html  parent.html  (+3 more)
terraform/: locals.tf  main.tf  outputs.tf  provider.tf  variables.tf
tests/: conftest.py  test_scripts.py  test_website.py
(+35 files in other folders)
