[project]
name = "tkd-registration-frontend"
version = "0.1.0"
description = "Frontend for the TKD Registration Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi~=23.1.0",
    "boto3~=1.35.0",
    "flask-login~=0.6.0",
    "flask~=3.0.0",
    "requests>=2.32.2",
    "stripe~=10.10.0",
    "urllib3>=2.2.2",
    "werkzeug>=3.0.3",
    "zipp>=3.19.1",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.0.0",
    "python-dotenv~=1.0.0",
    "ruff~=0.6.5",
    "setuptools==74.1.2",
    "zappa>=0.59.0",
]
