[project]
name = "tkd-registration-frontend"
version = "0.1.0"
description = "Frontend for the TKD Registration Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.4.0",
    "boto3~=1.36.6",
    "email-validator>=2.2.0",
    "flask~=3.1.0",
    "stripe~=11.4.1",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.0.0",
    "python-dotenv~=1.0.0",
    "ruff~=0.6.5",
    "setuptools==74.1.2",
    "zappa>=0.60.0",
]
