[project]
name = "tkd-registration-frontend"
version = "0.1.0"
description = "Frontend for the TKD Registration Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apiflask>=3.1.0",
    "boto3~=1.36.6",
    "pillow>=11.0.0",
    "email-validator>=2.2.0",
    "flask~=3.1.0",
    "flask-sqlalchemy>=3.1.0",
    "psycopg[binary]>=3.2.0",
    "pyjwt[crypto]>=2.10.0",
    "pytz>=2025.2",
    "stripe~=11.4.1",
    "supabase>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest~=8.0.0",
    "python-dotenv~=1.0.0",
    "ruff~=0.6.5",
    "setuptools==74.1.2",
    "zappa>=0.59.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
